ubiquity-slideshow-ubuntu (19) UNRELEASED; urgency=low

  * Add LTS designator to the relevant distributions per
    https://wiki.ubuntu.com/LucidLynx/ReleaseManifest.  The release is
    10.04 LTS, not 10.04.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 26 Mar 2010 13:10:36 +0000

ubiquity-slideshow-ubuntu (18) lucid; urgency=low

  [ Dylan McCall ]
  * Title aligns by bottom of new .header container (which was added to
    HTML for each slide). Second line uses smaller text than first line.
    This means titles can exceed a single line and still look nice.
  * Updated slides to use .content .wrap-top class when icon exceeds the
    usual container.   Moved / enlarged content block to fit another
    line of text without scrolling.

  [ Evan Dandrea ]
  * Update translation templates.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 25 Mar 2010 16:25:04 +0000

ubiquity-slideshow-ubuntu (17) lucid; urgency=low

  [ Evan Dandrea ]
  * Force UTF-8 for po4a-translate as well.
  * Updated Rhythmbox and Ubuntu One slides.  Thanks Matt Griffin!

  [ Dylan McCall ]
  * Updated content for Ubuntu slideshow. New .pot file.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 24 Mar 2010 23:37:19 +0000

ubiquity-slideshow-ubuntu (16) lucid; urgency=low

  [ Dylan McCall ]
  * New look for the Ubuntu slideshow.
  * Updated license details for images in debian/copyright.
  * Larger dimensions for Ubuntu slideshow: 816x500, from 700x420.
  * Removed GIMP build dependency. GIMP scripts in images-source no
    longer to be run at build time; final icons should be added
    manually in source package.

  [ Evan Dandrea ]
  * Use the official Firefox icon, rather than a generic browser icon.
  * Freeze exception for new design (LP: #538411).
  * Update the update-launchpad-translations script.
  * Update translations from Launchpad.

  [ Richard A. Johnson ]
  * Updated slideshow for Kubuntu installer
    (LP: #540348) (LP: #534949) (LP: #539147)

  [ Brian Murray ]